FIX: Layout issues with Address section and Form on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -520,6 +520,8 @@
                 width: 80%;
                 margin: 15px;
                 padding: 20px;
+                margin-left: -5px;
+                max-width: 100%;
     
         }
 
@@ -528,9 +530,9 @@
         }
 
         .address {
-            width: 80%;
-            margin: 15px;
-            padding: 20px;
+        width: 80%;
+        margin-left: 10px;
+        padding: 20px;
         }
         
         #video {
